src/main/java/com/example/jpa_study/project/error/exception/BusinessException.java
package com.example.jpa_study.project.error.exception;

import com.example.jpa_study.project.error.ErrorCode;

public class BusinessException extends RuntimeException {

    private final ErrorCode errorCode;

    public BusinessException(ErrorCode errorCode) {
        this.errorCode = errorCode;
    }
}
